Added a twig base template

--- a/views/templates/404.twig
+++ b/views/templates/404.twig
@@ -1,4 +1,4 @@
-{% extends "index.twig" %}
+{% extends "base.twig" %}
 {% block title %}Error 404{% endblock %}
 {% block content %}
     <pre>HTTP Error 404: page not found! </pre>
