--- a/views/templates/405.twig
+++ b/views/templates/405.twig
@@ -1,4 +1,4 @@
-{% extends "index.twig" %}
+{% extends "base.twig" %}
 {% block title %}Error 405{% endblock %}
 {% block content %}
     <pre>HTTP Error 405: method not allowed! </pre>
