--- a/views/templates/404.twig
+++ b/views/templates/404.twig
@@ -1,5 +1,5 @@
 {% extends "base.twig" %}
-{% block title %}Error 404{% endblock %}
+{% block title %}| Error 404{% endblock %}
 {% block content %}
-    <pre>HTTP Error 404: page not found! </pre>
+    <pre>Error 404: Page not found! </pre>
 {% endblock %}
