--- a/views/base.twig
+++ b/views/base.twig
@@ -5,29 +5,50 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>&#128478{% block title %}{% endblock %}</title>
+    <title>News API {% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <div id="container">
 
     <div id="top">
-        <div id="headerText">News API</div>
-        <div id="searchFormContainer">
-            <form id="searchForm" action="/" method="get">
-                <input required id="searchInput" type="text" name="search" placeholder="Search"
-                        {% if searchText %} value="{{ searchText }}"{% endif %}>
-                <input type="hidden" name="page" value="1">
-                <button class="submitButton">Search</button>
-            </form>
+        <div id="headerContainer">
+            <div id="headerTextContainer"><a id="headerLink" href="/">News API</a></div>
+            <div id="searchFormContainer">
+                <form id="searchForm" action="/" method="get">
+                    <input required id="searchInput" type="text" name="search" placeholder="Search"
+                            {% if searchText %} value="{{ searchText }}"{% endif %}>
+                    <input type="hidden" name="page" value="1">
+                    <button class="submitButton">Search</button>
+                </form>
+            </div>
+        </div>
+        <div id="topBar">
+            <div id="accountDisplay">
+                {% if session.id %}
+                    <p>Welcome, </p>
+                    <p id="userName"><a href="/account">{{ getUsername(session.id) }}</a></p>
+                    <p><a href="/logout">Logout</a></p>
+                {% else %}
+                    <p><a href="/login">Login</a></p>
+                    <p id="userName"></p>
+                    <p><a href="/register">Register</a></p>
+                {% endif %}
+            </div>
+            {% block topBarRight %}{% endblock %}
         </div>
     </div>
 
     <div id="content">
-        {% block content %}{% endblock %}
+        {% if errorMessage %}
+            <pre>{{ errorMessage }}</pre>
+        {% else %}
+            {% block content %}{% endblock %}
+        {% endif %}
     </div>
 
-    <div id="end">
+    <div id="bottom">
         {% block footer %}{% endblock %}
     </div>
 
