--- a/views/templates/405.twig
+++ b/views/templates/405.twig
@@ -1,5 +1,6 @@
 {% extends "base.twig" %}
-{% block title %}Error 405{% endblock %}
+{% block title %}| Error 405{% endblock %}
 {% block content %}
-    <pre>HTTP Error 405: method not allowed! </pre>
+    <pre>Error 405: Method not allowed!<br>Allowed Methods: {% for method in allowedMethods %}{{ method }} {% endfor %}
+    </pre>
 {% endblock %}
